--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,11 +102,14 @@ dependencies {
     implementation deps.androidx.multidex
 
     //XUI框架
-    implementation 'com.github.xuexiangjys:XUI:1.1.0'
+    implementation 'com.github.xuexiangjys:XUI:1.1.1'
     implementation deps.androidx.appcompat
     implementation deps.androidx.recyclerview
     implementation deps.androidx.design
     implementation deps.glide
+
+    //PictureSelector图片选择
+    implementation 'com.github.xuexiangjys.PictureSelector:picture-core:1.0.4'
 
     //下拉刷新
     implementation 'com.github.xuexiangjys.SmartRefreshLayout:refresh-header:1.1.5'
@@ -129,7 +132,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation deps.gson
     //XPage
-    implementation 'com.github.xuexiangjys.XPage:xpage-lib:2.2.7'
+    implementation 'com.github.xuexiangjys.XPage:xpage-lib:2.2.8'
     annotationProcessor 'com.github.xuexiangjys.XPage:xpage-compiler:2.2.7'
     //页面路由
     implementation 'com.github.xuexiangjys.XRouter:xrouter-runtime:1.0.1'
@@ -155,6 +158,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.squareup.okio:okio:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+
 }
 
 //walle多渠道打包
