--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     dependencies {
         classpath deps.android_gradle_plugin
         classpath deps.android_maven_gradle_plugin
+        classpath 'com.android.tools.build:gradle:3.5.3'
 
         classpath 'com.github.xuexiangjys.XAOP:xaop-plugin:1.0.3'
         classpath 'com.chenenyu:img-optimizer:1.1.1' // 图片压缩
